# homie

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  homie-notes.txt
.sqlx/: query-0242e26c0b6d7b0f0a12a1e600ac8a78b1eb196fb97cc23bf86ee1cdfda5430e.json  query-073fe722a663e9a5f25e73c5592938ae7dfc90d7d159c620444843c1aa117de8.json  query-0aeafdd216b7233a9de9c48e9f69d94821b780baf622a7c689b0d15895607d75.json  query-0e3b6de6fad6cf3bfbeb3e94f28c8454f8f8134152b2d1bf461be07b4a8ea0f9.json  query-0e5cca13997ee2262c286a625e73706d6f638a112e28d19e2084c8f0c3bb5ce0.json  query-0f535962d1efa399a72805d0f5fa06e2a1fa5859407afe6e0ae5e4330434f737.json  query-1cbd737a41d565ee6cb7b8ab23e493f042d3df9695eb67d51d53474ccbb3a5b1.json  query-2974443f863143d1b00c9a3688a98234ded1943cf30b870e9e0b35ac4ed115ac.json  query-309e67bf584d3f996f385737d2badbd4b11507e830836a7df9633d140fcacc58.json  query-3627784dd05ba98f1da482de21bc740cf107b4b6320d0cc1c8e295c6770746c8.json  query-383e40ff578db84369f39feba9e450cc4f376c6c79c9a176b5e0ec004efff584.json  query-3f194e9ed7527db43b10e9f48db51b416df7c17c71c44128e1d4396eaaee0fc0.json  query-3fa39708a76c19ba8c3bf2786178e0cd95967b12a51bb6641afabbd805e9b132.json  query-3fc66a26f35424c2393bbff17f431b7b2c3a898858a892febdd18943b01906f4.json  query-423fbc5b1b890be7c1ea8975267f43d9fb9ddf47d738dbde5ec388bdb6485a52.json  query-43b845a7477013a01dc887add2a289a77ba0d76080c78d38cc14d935057321b3.json  query-4a0826464e310a430c53fbf49d05c62870c3e0d7d85923dec2a6c737f1258482.json  query-4a1a281abb3e6278e07a2aa040790ba878c04bd9e0d2ac599ea7b6f4b15242a8.json  query-4a9c8614f1931a1eacde3882c5abcd85b1604da0291a8093b9e45f5450d6ebd6.json  query-4d2ae4e5d44c2e14574acc8013422c6fe41e357b9cb2aad80967f9b23a6870e5.json  query-51430435d86b04701fa54f6f1050bcf0a6217c523100ad2c6c08cebdd21e7bb2.json  query-51f658260c0f2401811dd251eec775d8e838f249486556cfa304e2b3ef24462c.json  query-5770164489900beab15fe617d8eab4530cd0193d744dab6191699fdf565e4d6f.json  query-5fac5bf15c767736650f4070830d880dd9bd5a03fa147318d0e2354b1dddd5ff.json  query-64cb933806fcf875f1280f6568eaac310ee5f022caa3f7414c6f02537e4ee36b.json  query-743cabbac776c171a7a7452165a32e5ecf9fde3a9b73b5e308adc333be1de835.json  query-7593c5223a6467ce883547db593dfae844802713dcad5775c18f898f462f4994.json  query-784f819260e4f710505dbe501f175d905bbe3fe1c8584dfedbc11fc5f3864689.json  query-78aca71b6093c2d8fca3f8b2463c0bb7ea70ba200a0bfc63c248ca26da80c97f.json  query-7ebcfe7a99bf4fa0a1d030a438b1a2d853cce84585003362489ad1da64e710e6.json  query-856525f959563d37dba3b8218b87f8c51af0e542e65b54f9cdfb673116393533.json  query-8b177e04de810be03c51637aed6edf5a52f670f8fbec368cbd33b6e02cedc6d6.json  query-8b4086313d8e4b183c6a61936144f858ef7786f0084dd670d8538105304a3fd3.json  query-8c6565e13d31b25c8dadc76ab62a299926294144fda1a3019e8d9abdfb6bc731.json  query-8dbf5a4a77c397dfc03f57b6db7b37b9d3987059b9014ccd5cfc6b77f55e6340.json  query-93ab5f1881d8ac738475f8a6f3864ac2c56efb6c3442778d6ae0852fadffc20c.json  query-95ecc1bddb21c6ff49c760965e34fa0409562411bfeed1bb51aa3fe056717b10.json  query-95f28a054218126b59898aab482b0e366e8fc938290ec0547b4dd2df64ae56fc.json  query-977244a10a1974d5e125c2c01606cb0cd6e811dd43af6ebd2e9291d17305ced0.json  query-999fb7e4b105ceeeb57543d027d4999fd56648197fac01183c14b387fb61544b.json  (+25 more)
db-test/: Cargo.toml
docs/: 03-28.excalidraw  04-12.excalidraw  04-13.excalidraw  04-16.excalidraw  04-17.excalidraw  05-04.excalidraw  05-05.excalidraw  05-06.excalidraw
homie-api/: Cargo.toml  Makefile.toml  README.md
homie-api/src/: Makefile.toml  README.md  error.rs  main.rs  util.rs
homie-api/src/adapter/: mod.rs
homie-api/src/adapter/repository/: mod.rs
homie-api/src/adapter/repository/database/: http.rs  mod.rs  postgres.rs  test.rs
homie-api/test/: curl.sh  endpoints.sh
homie-core/: Cargo.toml  README.md
homie-core/src/: error.rs  lib.rs  test.rs
homie-core/src/adapter/: config.rs  importer.rs  mod.rs
homie-core/src/adapter/repository/: mod.rs
homie-core/src/adapter/repository/database/: cassandra.rs  common.rs  file.rs  http.rs  mod.rs  postgres.rs  test.rs
homie-core/src/domain/: common.rs  dataset.rs  hpi.rs  mod.rs  region.rs  t_yield.rs  util.rs  zhvi.rs
homie-core/src/domain/zhvi/: mod.rs
homie-core/src/tests/: mod.rs
homie-data/: Cargo.toml  Makefile.toml  README.md
homie-data/datasets/fhfa-hpi/: HPI_AT_BDL_ZIP3.csv
homie-data/datasets/huduser-crosswalk/: COUNTY_ZIP_122023.csv
homie-data/datasets/zillow-zhvi/all-homes/bottom-tier/: City_zhvi_uc_sfrcondo_tier_0.0_0.33_sm_sa_month.csv
homie-data/datasets/zillow-zhvi/all-homes/mid-tier/: City_zhvi_uc_sfrcondo_tier_0.33_0.67_sm_sa_month.csv  Zip_zhvi_uc_sfrcondo_tier_0.33_0.67_sm_sa_month.csv
homie-data/datasets/zillow-zhvi/condo-coops/: City_zhvi_uc_condo_tier_0.33_0.67_sm_sa_month.csv  County_zhvi_uc_condo_tier_0.33_0.67_sm_sa_month.csv  Zip_zhvi_uc_condo_tier_0.33_0.67_sm_sa_month.csv
homie-data/datasets/zillow-zhvi/single-family-homes/: County_zhvi_uc_sfr_tier_0.33_0.67_sm_sa_month.csv
homie-data/src/: config.rs  fed_h15.rs  fhfa.rs  huduser.rs  main.rs  reader.rs  util.rs  writer.rs  zillow.rs
homie-data/src/adapter/: importer.rs  mod.rs
homie-data/src/adapter/repository/: mod.rs
homie-data/src/adapter/repository/database/: common.rs  file.rs  mod.rs  postgres.rs  test.rs
homie-data/src/database/: common.rs  file.rs  postgres.rs  test.rs
homie-data/src/domain/: common.rs  hpi.rs  mod.rs  region.rs  t_yield.rs  zhvi.rs
homie-data/src/model/: common.rs  hpi.rs  mod.rs  region.rs  t_yield.rs  zhvi.rs
homie-data/src/repository/: mod.rs  reader.rs  writer.rs
homie-data/src/repository/test/: unit-test.txt
homie-data/test/: .env  .test_env  test_env_run.sh
homie-fe/: Cargo.toml  Trunk.toml  index.html
homie-fe/src/: main.rs  model.rs
homie-webapp/: Cargo.toml  Makefile.toml  README.md
sqlx-poc/: Cargo.toml
sqlx-poc/local/: .env  run.sh
sqlx-poc/local/migrations/: 20240424014039_init_tables.sql
sqlx-poc/src/: hpis.rs  main.rs  models.rs  tyields.rs  zhvis.rs
test-plot/: Cargo.toml  Graph_name.html
test-plot/src/: main.rs
(+48 files in other folders)
