[workspace]
members = [
    "homie-api", "homie-core",
    "homie-data", "homie-webapp"
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true # Same as strip = symbols

# Leptos WASM bin is optimized for size, not speed
[profile.release.package.homie-webapp]
inherits = "release"
opt-level = 'z'
