[package]
name = "homie-api"
version = "0.1.0"
edition = "2021"

[dependencies]
homie-core = { path = "../homie-core"}
axum = { version = "0.7.5", features = ["tracing"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
