[package]
name = "homie-api"
version = "0.1.0"
edition = "2021"

[dependencies]
homie-core = { path = "../homie-core"}
axum = { version = "0.7.5", features = ["tracing"] }
axum-extra = { version = "0.9.3", features = ["form"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
