[package]
name = "homie-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "macros"] }
