[package]
name = "homie-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.82"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "macros"] }
utoipa = { version = "4.2.3", default-features = false, features = ["axum_extras"] }
utoipa-swagger-ui = "7.1.0"
