[package]
name = "homie-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homie-core = { path = "../homie-core"}
chrono = { version = "0.4.37", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
