[package]
name = "homie-fe"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
log = "0.4.22"
plotly = { version = "0.9.1", features = ["wasm"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
