[package]
name = "test-plot"
version = "0.1.0"
edition = "2021"

[dependencies]
homie-core = { path = "../homie-core"}
plotly = "0.8.4"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "blocking"] }
serde = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
