[package]
name = "test-plot"
version = "0.1.0"
edition = "2021"

[dependencies]
homie-core = { path = "../homie-core"}
chrono = { version = "0.4.38", features = ["serde"] }
plotly = { version = "0.8.4", features = ["wasm"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "blocking"] }
serde = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
